...
    <string name="menu_group_controllers">Controllers</string>
    <string name="menu_group_gyro">Gyroscope</string>
    <string name="menu_group_sound">Sound</string>
    <string name="menu_group_game_changes">This game\'s settings</string>
    <string name="menu_group_menu">This menu</string>
    <string name="menu_group_session">Session</string>
    <string name="menu_t_display">Screen</string>
    <string name="menu_opt_fit">Fit</string>
    <string name="menu_opt_fill">Fill</string>
    <string name="menu_opt_stretch">Stretch</string>
    <string name="menu_opt_integer">Integer</string>
    <string name="menu_t_scaling">Scaling effect</string>
    <string name="menu_t_aa">Antialiasing</string>
...
